# GANTRY_ROBOT_CONTROL_ROS2

./: README.md  reminder.txt
robot_control/: CMakeLists.txt  package.xml
robot_control/data/: vel_acc.txt
robot_control/include/robot_control/: calculate_goal_pose_node.hpp  create_object.hpp  create_planning_interface_node.hpp  create_ros2_node.hpp  go_to_goal_pose_client.hpp  go_to_goal_pose_node.hpp  grab_release_object.hpp
robot_control/scripts/: control_sm.py  plot_vel_acc.py
robot_control/src/: go_to_goal_pose_srv_server.cpp  go_to_goal_pose_test_client.cpp  robot_control_bt.cpp  robot_control_sm.cpp  robot_position_control.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: rsp.launch.py
robot_description/urdf/: robot.urdf.xacro  robot_core.xacro
robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/srv/: GoToGoalPose.srv
