<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="brh@todo.todo">brh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>yasmin_viewer</depend>
  <depend>simple_node</depend>
  <depend>nav_msgs</depend>
  <depend>(rclcpp_action REQUIRED)</depend>
  <depend>(moveit_core REQUIRED)</depend>
  <depend>(moveit_ros_planning REQUIRED)</depend>
  <depend>(moveit_ros_planning_interface REQUIRED)</depend>
  <depend>(interactive_markers REQUIRED)</depend>
  <depend>(geometric_shapes REQUIRED)</depend>
  <depend>(control_msgs REQUIRED)</depend>
  <depend>(moveit_msgs REQUIRED)</depend>
  <depend>robot_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ros2_behavior_tree_msgs</depend>
  <depend>ros2_behavior_tree</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>robot_msgs</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
